static/css/default.css
/*
Went with this palette:
http://www.colourlovers.com/palette/1213709/Mediterranean_Villa

Other palettes:
- http://www.colourlovers.com/palette/154405/Ladbrokes
- http://www.colourlovers.com/palette/132637/Odd_but_trendy
*/
body {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 18px;
  text-align: justify;
}

sup {
  vertical-align: super;
  font-size: 0.7em;
  line-height: 1;
}
strong { font-weight: bold; }
em { font-style: italic; }
ul { list-style-type: square; }
ol { list-style-type: decimal; }
code, tt { font-family: monospace; }

div#container {
  max-width: 700px;
  padding: 0 0.5em;
  margin: 0 auto;
}

div.clear {
  clear: both;
}

p, li {
  line-height: 1.4;
}

p {
  margin: 1em 0;
}

p img {
  float: left;
  margin-right: 1em;
}

h1, h2 {
  font-family: 'Rokkitt', Georgia, serif;
  font-weight: bold;
  clear: both;
}

h1 {
  font-size: 3em;
  margin-top: 0.5em;
  border-bottom: 2px solid #F42B17;
}
h1 a:link, h1 a:active, h1 a:visited {
  color: #000000;
  text-decoration: none;
}


a:link, a:visited {
  color: #008EC2;
}
a:hover {
  color: #007FAD;
}

h2 {
  font-size: 1.6em;
  margin: 1em 0 0.5em 0;
  border-bottom: 1px solid #D7D5CD;
}

ul, ol {
  margin: 1em 0;
  padding-left: 2.5em;
}


ul#nav {
  margin: 0.5em 0 0 0;
  padding: 0;
}

ul#nav li {
  display: inline;
  list-style: none;
  margin-right: 1em;
}

header {
  margin-bottom: 1.5em;
}

footer {
  color: #666;
  margin: 2em 0 1em 0;
}

div#description {
  margin-bottom: 2em;
}

div#description img {
  float:left;
  margin: 0 1em 0 0;
}

div.highlight {
  background-color: #F1EFE6;
  padding: 0.7em;
  border-bottom: 1px solid #D7D5CD;
  border-right: 1px solid #D7D5CD;
}
div.highlight h2 {
  font-size: 1.3em;
  color: #F42B17;
  border-color:#D7D5CD;
  border: none;
  margin: 0;
}
div.highlight p {
  margin: 0.2em 0 0 0;
}

span.interest {
  border-bottom: 1px solid #CFCFCF;
  background-color: #EDEDED;
  padding: 0 0.2em;
}

/* Inspired from http://alistapart.com/article/taminglists/. */
div.publication { clear: both; }
div.publication p { display: inline; }
div.publication ul {
  display: inline;
  margin: 0 0 0 0.5em;
  padding: 0;
  font-variant: small-caps;
  white-space:nowrap;
}
div.publication li {
  display: inline;
  padding: 0 0 0 0.5em;
  margin: 0 0 0 0.3em;
  border-left: 1px solid #CFCFCF;
}
div.publication li.first {
  border: none;
  padding: 0;
  margin: 0;
}

